<resources>
    <string name="app_name">calcmoy</string>

    <string name="next">التالي</string>

    <string-array name="stage">
        <item>إبتدائي</item>
        <item>متوسطة</item>
        <item>ثانوية</item>
        <item>جامعة</item>
    </string-array>
    <string name="add_user">أضف حساب</string>
    <string name="setting">ادارة الحسابات</string>
    <string name="contact_us">راسلنا</string>
    <string name="field_required">يجب ملأ هده الخانة</string>
    <string name="choose_faculty">إختر الشعبة</string>
    <string name="confirme">تأكيد</string>
    <string name="creat_acount">إنشاء حساب جديد</string>
    <string name="login">تسجيل الدخول</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="module">المواد</string>
    <string name="prochevnts">أحداث قريبة</string>
    <string name="name">الإسم</string>
    <string name="famillyname">اللقب</string>
    <string name="repeatPassword">أعد كلمة السر</string>
    <string name="main">الرئيسية</string>
    <string name="evnts">الأحداث</string>
    <string name="moyene">المعدل</string>
    <string name="no_event_yet">لا يوجد أحداث مسجلة بعد</string>
    <string name="time">الزمن</string>
    <string name="place">المكان</string>
    <string name="add">إضافة</string>
    <string name="events_soon">أحداث قريبة</string>
    <string name="points3">⋮</string>
    <string name="fill_info">إملأ المعلومات</string>
    <string name="module_name">إسم المقياس</string>
    <string name="coief">المعامل</string>
    <string name="pick_color">إختر اللون</string>
    <string name="change_name">تغيير إسم المقياس</string>
    <string name="change_coei">تغيير المعامل</string>
    <string name="change_color">تغيير اللون</string>
    <string-array name="number_profile">
        <item>الأول</item>
       <item>الثاني</item>
        <item>الثالث</item>
        <item>الرابع</item>
        <item>الخامس</item>
    </string-array>
    <string name="open_drawer">open-drawer</string>
    <string name="close_drawer">close_drawer</string>

    <!-- TODO: change text to arabic -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signein_failed">فشل في التسجيل الدخول </string>
    <string name="some_error">some think went wrong</string>
    <string name="inknown_error">Somme thing went wrong</string>
    <string name="password_not_compatible">the passwords are not Compatible</string>
    <string name="email_not_valid">Email is not valid !</string>
    <string name="password_short">the password is too shoort</string>
    <string name="cnx_failed">there is no internet connection !!</string>
    <string name="email_not_correct">email is not Correct !!</string>
    <string name="password_not_correct">password is not Correct !!</string>
    <string name="login_error">Login error</string>
    <string name="name_empty">name should not be empty</string>
    <string name="prenam_empty">prenam should not be empty</string>
    <string name="registration_faill">registration failled</string>
    <string name="scien">علمي</string>
    <string name="lettre">أدبي</string>
    <string name="math">رياضيات</string>
    <string name="scien_taj">علوم تجريبية</string>
    <string name="economi">تسيير و إقتصاد</string>
    <string name="tm_electrique">تقني رياضي (هندسة كهربائية)</string>
    <string name="tm_mecanique">تقني رياضي (هندسة ميكانيكية)</string>
    <string name="tm_civil">تقني رياضي(هندسة مدنية)</string>
    <string name="tm_tar">تقني رياضي( هندسة الطرائق)</string>
    <string name="language">لغات أجنبية</string>
    <string name="philo">فلسفة</string>

    //facebook
    <string name="facebook_app_id">355056481750451</string>
    <string name="fb_login_protocol_scheme">fb355056481750451</string>

    <string name="opration_canceled">The operation has been canceled</string>
    <string name="weak_password">weak password please provide a strong password</string>
    <string name="invalid_credentiel">invalid Credentiel</string>
    <string name="operation_canceld">operation canceld</string>
    <string name="pr_1">السنة الأولى</string>
    <string name="pr_2">السنة الثانية</string>
    <string name="pr_3">السنةالثالثة</string>
    <string name="pr_4">السنة الرابعة</string>
    <string name="pr_5">السنة الخامسة</string>
    <string name="cem_1">السنة الأولى متوسطة</string>
    <string name="cem_2">السنة الثانية متوسطة</string>
    <string name="cem_3">السنةالثالثة متوسطة</string>
    <string name="cem_4">السنةالرابعة متوسطة (bem)</string>
    <string name="licy_1">السنة الأولى ثانوي</string>
    <string name="licy_2">السنة الثانية ثانوي</string>
    <string name="licy_3">السنةالثالثة ثانوي (bac)</string>
    <string name="no_matters">coludn\'t load your Module pleas fill it by your selfe</string>
    <string name="semestre">semestre :</string>
    <string name="user_state_error">some thing is wrong please delete the application data and restart the app</string>
    <string name="delete_item">item deleted</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="coif">المعامل</string>
    <string name="search_hint">search for your universit</string>
    <string name="no_university">sorry no university with that name please fill your module by your selfe</string>
    <string name="university_not_found">sorry we can\'t find this university</string>
    <string name="search">Search</string>
    <string name="adding">what do you want to add</string>
    <string name="matter">matter</string>
    <string name="add_matter">add Module</string>
    <string name="add_semestre">add Semestre</string>
    <string name="color_pick">pick a color</string>
    <string name="save_matter">save matter</string>
    <string name="matter_empty">matter name should not be empty</string>
    <string name="coif_empty">coificient should not be empty</string>
    <string name="update_matter">update</string>
    <string name="faill_image">faille on loading image !!</string>
    <string name="upload_img">uploading image please wait !!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_acount">Add Acount</string>
    <string name="manage_acount">Manage Acount</string>
    <string name="save">حفظ</string>
   <string name="disable">إلغاء</string>
   <string name="delete_dialog">حدف</string>
    <string name="moyenne_is">معدلك:  20/</string>
    <string name="matter_coefiicient"> معامل المادة : </string>
</resources>
