<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/updatemodule_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Algorithme"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/updatemodule_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
            android:id="@+id/updatemodule_name_layout">
                <EditText
                    android:id="@+id/updatemodule_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/change_name"
                    android:inputType="textPersonName"
                    android:textDirection="rtl" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/updatemodule_name_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/updatemodule_coi_layout"
                android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/updatemodule_coei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/change_coei"
                        android:textDirection="rtl" android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:id="@+id/updatemodule_pick_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/updatemodule_coi_layout"
                    app:layout_constraintRight_toLeftOf="@id/updatemodule_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="20dp"
                    android:background="#00ffffff"
                    android:text="@string/change_color"
                    android:textSize="24sp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/updatemodule_color"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@color/orange"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/updatemodule_pick_color"
                    app:layout_constraintTop_toBottomOf="@id/updatemodule_coi_layout"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                   />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/save"
                android:textColor="@color/black_green"
                android:textSize="24sp"
                android:textStyle="bold"
                android:clickable="true"
                android:layout_marginTop="25dp"
                android:id="@+id/updatemodule_save"
        app:layout_constraintTop_toBottomOf="@id/updatemodule_pick_color"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/updatemodule_disable"/>
        <TextView
                android:layout_width="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/updatemodule_save"
                app:layout_constraintRight_toLeftOf="@id/updatemodule_save"
                app:layout_constraintLeft_toRightOf="@id/updatemodule_delete"

                android:layout_marginRight="6dp"
                android:textColor="@color/brown"
                android:clickable="true"
                android:textSize="24sp"
                android:text="@string/disable"
                android:id="@+id/updatemodule_disable"
                android:background="@color/white"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/updatemodule_save"
        app:layout_constraintRight_toLeftOf="@id/updatemodule_disable"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/white"
                android:textSize="24sp"
                  android:clickable="true"
                android:textColor="@color/orange"
                android:text="@string/delete_dialog"
        android:id="@+id/updatemodule_delete"
        android:textStyle="bold"/>

    </android.support.constraint.ConstraintLayout>
</layout>