<?xml version="1.0" encoding="utf-8"?>
<layout  >
    <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <TextView
                android:id="@+id/addmodule_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fill_info"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addmodule_title">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/addmodule_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/module_name"
                        android:inputType="textPersonName"
                        android:textDirection="rtl"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/addmodule_coei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/coief"
                        android:inputType="textPersonName"
                        android:textDirection="rtl"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toStartOf="@id/add_matter_save"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="65dp"
                app:layout_constraintBottom_toBottomOf="parent">

            <Button
                    android:id="@+id/addmodule_pick_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    android:gravity="center_vertical"
                    android:text="@string/pick_color"
                    android:textSize="20sp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/addmodule_color"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="0"/>
        </LinearLayout>
        <Button
                android:id="@+id/add_matter_save"
                android:layout_width="wrap_content" android:layout_height="40dp"
                android:background="@color/white"
                android:text="@string/save_matter"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
        />


    </android.support.constraint.ConstraintLayout>
</layout>