<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:cardBackgroundColor="#fff">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/signein_login"
                        app:layout_constraintEnd_toStartOf="@+id/guideline18"
                        app:layout_constraintStart_toStartOf="@+id/guideline17"
                        tools:layout_editor_absoluteY="317dp">

                    <ImageButton
                            android:id="@+id/signein_google"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25dp"
                            android:layout_weight="1"
                            android:background="#00ffffff"
                            app:srcCompat="@drawable/google"
                            tools:layout_editor_absoluteX="163dp"
                            tools:layout_editor_absoluteY="328dp"/>

                    <ImageButton
                            android:id="@+id/signein_fb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_weight="1"
                            android:background="#00ffffff"
                            app:srcCompat="@drawable/fb"
                            tools:layout_editor_absoluteX="59dp"
                            tools:layout_editor_absoluteY="316dp"/>
                </LinearLayout>

                <Button
                        android:id="@+id/signein_login"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="6dp"
                        android:background="#00ffffff"
                        android:text="@string/login"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/creat_acount"
                        android:textColor="#000"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                        android:id="@+id/inputs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@+id/signein_btn"
                        app:layout_constraintEnd_toStartOf="@+id/guideline18"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline17"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                        <EditText
                                android:id="@+id/signein_email"
                                style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:completionThreshold="2"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="#000" android:textColorHint="#808080"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                        <EditText
                                android:id="@+id/signein_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:imeActionId="6"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="#000" android:textColorHint="#808080"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                        <EditText
                                android:id="@+id/signein_repeatpassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/repeatPassword"
                                android:imeActionId="6"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="#000" android:textColorHint="#808080"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.constraint.Guideline
                        android:id="@+id/guideline17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.1"/>

                <android.support.constraint.Guideline
                        android:id="@+id/guideline18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.9"/>

                <Button
                        android:id="@+id/signein_btn"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginBottom="16dp"
                        android:background="#000"
                        android:text="@string/creat_acount"
                        android:textColor="#fff"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                        app:layout_constraintEnd_toStartOf="@+id/guideline18"
                        app:layout_constraintStart_toStartOf="@+id/guideline17"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</layout>